--- a/exemplosBootstrap/Album.html
+++ b/exemplosBootstrap/Album.html
@@ -35,7 +35,7 @@
           <div class="col-sm-4 offset-md-1 py-4">
             <h4 class="text-white">CONTATOS</h4>
             <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Twitter</a></li>
+              <li><a href="https://www.linkedin.com/in/adintel-ti-2670482a8/" class="text-white">Linkedin</a></li>
               <li><a href="#" class="text-white">Facebook</a></li>
               <li><a href="#" class="text-white">Email</a></li>
             </ul>
