--- a/exemplosBootstrap/Album.html
+++ b/exemplosBootstrap/Album.html
@@ -76,7 +76,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 box-shadow">
-            <img src="./images/logo.png" style="height: 300px; width: 100%; display: block;">
+            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22347%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20347%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_18de5495a1d%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A17pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_18de5495a1d%22%3E%3Crect%20width%3D%22347%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22116.21419906616211%22%20y%3D%22120.0000846862793%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">AMSS-After market support system, é um projeto desenvolvido em BPMNS para atender
                 fluxos
@@ -95,7 +95,7 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 box-shadow">
-            <img src="./images/logo.png" style="height: 325px; width: 100%; display: block;">
+            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22347%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20347%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_18de5495a1d%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A17pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_18de5495a1d%22%3E%3Crect%20width%3D%22347%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22116.21419906616211%22%20y%3D%22120.0000846862793%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">Sistema Phoenix - Um sistema hibrido entre windows e web application para gerenciar
                 informações biométricas de pessoas detidas.
@@ -113,7 +113,7 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 box-shadow">
-            <img src="./images/logo.png" style="height: 325px; width: 100%; display: block;">
+            <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22347%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20347%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_18de5495a1d%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A17pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_18de5495a1d%22%3E%3Crect%20width%3D%22347%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22116.21419906616211%22%20y%3D%22120.0000846862793%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
             <div class="card-body">
               <p class="card-text">ICare e ICare parceiro - Sistema de sac e sac para prestadores de serviço para
                 suportar
@@ -182,74 +182,75 @@
 <script src="./scripts/bootstrap.min.js.transferir"></script>
 <script src="./scripts/holder.min.js.transferir"></script>
 <script>
+  
   function ShowForm() {
-    document.getElementById("home").hidden = true;
-    document.getElementById("footer").hidden = true;
-    document.getElementById("contact").hidden = false;
-    document.getElementById("address").hidden = false;
-  }
-  function Enviar() {
-    const form = document.getElementById("contactForm");
-    var nome = form.elements["txtNome"].value.trim();
-    var email = form.elements["txtEmail"].value.trim();
-    var mensagem = form.elements["txtMensagem"].value.trim();
-    var errorMsg = document.getElementById("errorMsg");
-
-    // Validando se os campos estão preenchidos
-    if (nome === "" || email === "" || mensagem === "") {
-      errorMsg.textContent = "Por favor, preencha todos os campos.";
-      return;
+      document.getElementById("home").hidden = true;
+      document.getElementById("footer").hidden = true;
+      document.getElementById("contact").hidden = false;
+      document.getElementById("address").hidden = false;
     }
 
-    // Validando o formato do email
-    var emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-    if (!emailPattern.test(email)) {
-      errorMsg.textContent = "Por favor, insira um email válido.";
-      return;
+    function ShowHome() {
+      document.getElementById("home").hidden = false;
+      document.getElementById("footer").hidden = false;
+      document.getElementById("contact").hidden = true;
+      document.getElementById("address").hidden = true;
     }
 
-    // Código que envia o email
-    alert('Mensagem enviada com sucesso!');
+    function Enviar() {
+      const form = document.getElementById("contactForm");
+      var nome = form.elements["txtNome"].value.trim();
+      var email = form.elements["txtEmail"].value.trim();
+      var mensagem = form.elements["txtMensagem"].value.trim();
+      var errorMsg = document.getElementById("errorMsg");
 
-    var nome = form.elements["txtNome"].value = "";
-    var email = form.elements["txtEmail"].value = "";
-    var mensagem = form.elements["txtMensagem"].value = "";
-
-    // Limpa mensagens de erro anteriores
-    errorMsg.textContent = "Obrigado pelo seu contato, retornaremos em breve!";
-  }
-  //Código que envia o email
-  // Configuração para enviar o email usando fetch
-  var apiUrl = "https://localhost:7089/SendEmail"; // Substitua pelo endpoint correto da sua API
-
-  var emailData = {
-    from: email,
-    to: ["adintelti@gmail.com"],
-    subject: `contato de ${nome}`,
-    body: `mensagem informada no formulário: ${mensagem}`
-  };
-
-  fetch(apiUrl, {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json'
-    },
-    body: JSON.stringify(emailData)
-  })
-    .then(response => {
-      if (response.ok) {
-        alert('Email enviado com sucesso!');
-        form.reset();
-        errorMsg.textContent = "Obrigado pelo seu contato, retornaremos em breve!";
-      } else {
-        throw new Error('Erro ao enviar email');
+      // Validando se os campos estão preenchidos
+      if (nome === "" || email === "" || mensagem === "") {
+        errorMsg.textContent = "Por favor, preencha todos os campos.";
+        return;
       }
-    })
-    .catch(error => {
-      console.error('Erro:', error);
-      alert('Houve um erro ao enviar o email. Por favor, tente novamente mais tarde.');
-      errorMsg.textContent = "Houve um erro ao enviar o email. Por favor, tente novamente mais tarde.";
-    });
+
+      // Validando o formato do email
+      var emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      if (!emailPattern.test(email)) {
+        errorMsg.textContent = "Por favor, insira um email válido.";
+        return;
+      }
+
+      //Código que envia o email
+      // Configuração para enviar o email usando fetch
+      var apiUrl = "https://localhost:7089/SendEmail"; // Substitua pelo endpoint correto da sua API
+
+      var emailData = {
+        from: email,
+        to: [ "adintelti@gmail.com" ],
+        subject: `contato de ${nome}`,
+        body: `mensagem informada no formulário: ${mensagem}`
+      };
+
+      fetch(apiUrl, {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(emailData)
+      })
+      .then(response => {
+        if (response.ok) {
+          alert('Email enviado com sucesso!');
+          form.reset();
+          errorMsg.textContent = "Obrigado pelo seu contato, retornaremos em breve!";
+        } else {
+          throw new Error('Erro ao enviar email');
+        }
+      })
+      .catch(error => {
+        console.error('Erro:', error);
+        alert('Houve um erro ao enviar o email. Por favor, tente novamente mais tarde.');
+        errorMsg.textContent = "Houve um erro ao enviar o email. Por favor, tente novamente mais tarde.";
+      });
+    }
+  
 function CancelarForm() {
 
 alert("Cancelado com Sucesso!")
