--- a/client/index.html
+++ b/client/index.html
@@ -27,9 +27,8 @@
           <div class="col-sm-4 offset-md-1 py-4">
             <h4 class="text-white">CONTATOS</h4>
             <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Twitter</a></li>
-              <li><a href="#" class="text-white">Facebook</a></li>
-              <li><a href="#" class="text-white">Email</a></li>
+              <li><a href="https://www.linkedin.com/in/adintel-ti-2670482a8/" target="_blank" class="text-white">Linkedin</a></li>
+              <li><a href="#" class="text-white" onclick="ShowForm()">Email</a></li>
             </ul>
           </div>
         </div>
