--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="navbar navbar-dark bg-dark box-shadow">
       <div class="container d-flex justify-content-between">
-        <a href="#" class="navbar-brand d-flex align-items-center">
+        <a href="#" class="navbar-brand d-flex align-items-center" onclick="ShowHome()">
           <img src="./images/logo.png" alt="Descrição da imagem" width="20" height="20">
           <strong>Adintel TI</strong>
         </a>
