--- a/client/index.html
+++ b/client/index.html
@@ -133,18 +133,16 @@
       <div class="py-5 text-center">
         <h2>Formulário de contato</h2>
       </div>
-
       <div class="row">
         <div class="col-md-11 order-md-1">
           <form id="contactForm" class="needs-validation" novalidate="">
             <div class="mb-3">
-              <label for="txtEmail">*Nome</label>
+              <label for="txtNome">*Nome</label>
               <input type="text" class="form-control" id="txtNome" placeholder="" required>
               <div class="invalid-feedback">
                 É obrigatório inserir um nome válido.
               </div>
             </div>
-
             <div class="mb-3">
               <label for="txtEmail">*Email</label>
               <input type="email" class="form-control" id="txtEmail" placeholder="exemplo@exemplo.com" required>
@@ -152,7 +150,6 @@
                 Por favor, insira um endereço de e-mail válido, para atualizações de entrega.
               </div>
             </div>
-
             <div class="mb-3">
               <label for="txtMensagem">*Mensagem</label>
               <textarea id="txtMensagem" class="form-control" placeholder="Gostaria de..." name="txtMensagem" rows="5"
@@ -194,6 +191,7 @@
       <p>Adintel@ 2022<br />Rua Caim, 71, Jardim São Pedro - Barueri SP, Brasil, cep 06402-230.</p>
     </div>
   </footer>
+  
 </body>
 <script src="./scripts/jquery-3.2.1.slim.min.js.transferir"
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
